--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,55 @@
     @apply w-[1220px] mx-auto;
   }
 }
+
+/* Image Slider Container */
+.slider {
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+/* Slider Image */
+.slider img {
+  width: 100%;
+  height: auto;
+  max-height: 400px;
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+.paused {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
+  padding: 5px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.384);
+  display: flex;
+}
+.pagination-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  margin: 0 5px;
+  background-color: rgba(255, 255, 255, 0.459);
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #f97316;
+}
